deps/v8/test/message/fail/function-param-after-rest.out
*%(basename)s:7: SyntaxError: Rest parameter must be last formal parameter
function f(...x, y) { }
               ^
SyntaxError: Rest parameter must be last formal parameter

